bug 22248 - Error console buttons are aligned incorrectly (r=mook)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@19600 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/global/console/console.css
+++ b/app/skin/global/console/console.css
@@ -224,6 +224,23 @@ toolbarbutton[id="Console:clear"]:hover:active {
 
 #ConsoleBox {
   margin-bottom: 14px;
-  border-bottom: 1px solid #bebebe; 
+  background-color: transparent;
+  border-bottom: none;
 }
-
+#ConsoleBox hbox.lineNumberRow > label {
+  color: rgb(15,15,15);
+}
+#console-toolbox > toolbar#ToolbarMode toolbarbutton {
+  background-image: url(chrome://songbird/skin/base-elements/bg-button-tall.png);
+  background-position: center 0px;
+}
+#console-toolbox > toolbar#ToolbarMode toolbarbutton:hover {
+  background-position: center -45px;
+}
+#console-toolbox > toolbar#ToolbarMode toolbarbutton:active,
+#console-toolbox > toolbar#ToolbarMode toolbarbutton[checked="true"] {
+  background-position: center -90px;
+}
+#console-toolbox > toolbar#ToolbarMode toolbarbutton:disabled {
+  background-position: center -135px;
+}
